ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: service-srv
            port:
              number: 3000
     
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: test.com
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: service-srv
            port:
              number: 3000
# apiVersion: apps/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#   spec:
#     rules:
#       - host: test.com
#         http:
#           paths:
#             - path: /api/?(.*)
#               backend:
#                 serviceName: server-srv
#                 servicePort: 3000
#             - path: /?(.*)
#               backend:
#                 serviceName: client-srv
#                 servicePort: 3000
